--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-size: 1rem;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ml-1 {
+  margin-left: 1rem;
+}
+
+.App {
+  display: flex;
+  width: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+nav {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.active {
+  background-color: rgba(0, 200, 255, 0.769);
+  color: white;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 2.5rem;
+  margin: 0.4rem 0;
+  padding: 1rem;
+}
+
+li img {
+  margin-right: 1rem;
+}
+
+main {
+  width: 100%;
+}
+
+.InfoHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+.client_info_left {
+}
+
+.client_info_right {
+  display: flex;
+  align-items: center;
+}
+
+.client_info_right > * {
+  margin-right: 2rem;
+}
+
+.ClientData {
+  margin-left: 1rem;
+}
+
+.show {
+  display: flex;
+}
+
+.hide {
+  display: none;
+}
+
+/* dropdown */
+.dropdown {
+  background-color: white;
+  position: relative;
+  top: 0;
+  width: 100%;
+}
+
+.dropdown-trigger {
+  display: flex;
+  border-radius: 0.2rem;
+  align-items: center;
+  width: 10rem;
+  padding: 0.2rem;
+  background-color: white;
+}
+
+.menu {
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  align-content: center;
+}
+button {
+  padding: 0.2rem;
+  background-color: white;
+  outline: none;
 }
